# portal-wrapper

./: .gitignore  README.md
src/: CMakeLists.txt  config.h.cmake  portal-wrapper.cmake
src/common/: gtk-portal.c
src/gtk2/: CMakeLists.txt  gtk-portal.c  gtk2-portal-wrapper.cmake
src/gtk3/: CMakeLists.txt  gtk-portal.c  gtk3-portal-wrapper.cmake
